# big-data-training

./: .gitignore  Dockerfile  README.md  docker-compose-kafka.yml  docker-compose-spark.yml  pyproject.toml
notebooks/: 1_clickhouse.ipynb  2_kafka.ipynb  3_spark.ipynb
