[tool.poetry]
name = "big-data-training"
version = "0.1.0"
description = ""
authors = ["LuchnikKek <ilua.kabeshov01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clickhouse-driver = "0.2.7"
jupyter = "1.0.0"
kafka-python = {git = "https://github.com/dpkp/kafka-python.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
